Fixed searchbar on small screen #2

--- a/style.css
+++ b/style.css
@@ -184,12 +184,13 @@ body {
 
 .search-bar-active {
   height: 40px;
-  width: 220px;
+  width: 200px;
   opacity: 1;
   pointer-events: auto;
 }
 
 .search-bar-input {
+  width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 5px;
 }
